--- a/client/package.json
+++ b/client/package.json
@@ -14,13 +14,12 @@
     "mongoose": "^6.0.5"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "nodemon -r esm server.js",
-    "client": "npm start --prefix client",
+   
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "eject": "react-scripts eject",
-    "dev": "concurrently \"npm run server\" \"npm run client\" "
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+    
     
   },
   "eslintConfig": {
